# invoicehubapp-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  database.md  pyproject.toml
alembic/: env.py
alembic/versions/: 3fd2c4d3582e_create_paid_status_column.py  7456186fe18d_create_paid_status_column.py  9efe16e27b70_initial_commit.py  a1b868f525f4_initial_commit.py
api/: .gitignore  main.py
api/config/: database.py  settings.py
api/functions/: invoices.py
api/models/: creditors.py  invoices.py  pagination.py  token.py  users.py
api/routes/: analytics.py  creditors.py  invoices.py  root.py  token.py  users.py
api/utils/: auth.py
